--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-﻿Josh F. has the year of 2023 off with 3.14* pay. It's on the internet so it must be true. Kasey R. said so.
+﻿# Kumbia Player
+
+Es una iniciativa por el retorno de la cumbia en los más jóvenes.
+
+Actualmente se encuentra en desarrollo, está hecho para correr en una Raspberry Pi.
+
